--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     },
     "dependencies": {
         "async" : ">=0.1.9 <1.0.0",
-        "mustache" : ">0.3.1 < 1.0.0",
-        "request" : ">1.9.8 < 2.0.0",
-        "underscore" : ">1.1.7 < 2.0.0"
+        "mustache" : ">=0.3.0 < 1.0.0",
+        "request" : ">=1.9.8 < 2.0.0",
+        "underscore" : ">=1.1.7 < 2.0.0"
     },
     "engine" : "node >= 0.4.1",
     "main": "./backuptweets"
